--- a/index.css
+++ b/index.css
@@ -27,12 +27,43 @@ header{
   height: auto;
   right: 0;
 }
-nav{
-  margin: 0 auto;
-  width: 70%;
-  padding-top: 5em;
+.header-content{
+    margin: 0 auto;
+    width: 65%;
+  }
+
+h1{
+  background: url("images/title.png") no-repeat;
+  height: 90px;  
 }
+h1 a{
+  display: none;
+}
+
+h2{
+  background: url("images/sub.png") no-repeat;
+  height: 90px;  
+}
+h2 a{
+  display: none;
+}
+
+h3{
+  background: url("images/link.png") no-repeat;
+  height: 90px;  
+}
+h3 a{
+  display: none;
+}
+
+
+nav{
+  overflow: hidden;
+}
+
 nav ul{
+  margin: 30px auto;
+  width: 85%;
   text-align: center;
   cursor: pointer;
   background: linear-gradient(to bottom, #8b8b8b, #717171 49%, #5e5e5e 50%, #787878);
@@ -60,15 +91,15 @@ nav ul li:last-child::after{
 }
 
 nav ul li::before{
-  border-left: 1px solid rgb(89, 89, 89);	
+  border-left: 1px solid rgba(255,255,255,.1);	
   	content: "";
 	padding: 10px 25px;
 	margin: 0 -25px;
 	position: relative;
 }
 
-nav ul li::after{
-	border-right: 1px solid rgba(255,255,255,.1);	
+nav ul li::after{  
+  border-right: 1px solid rgb(89, 89, 89);	
   content: "";
 	padding: 10px 29px;
 	margin: 0 -29px;
@@ -96,6 +127,7 @@ nav li a{
 
 .bottom-images li{
   float: left;
+  width: 25%;
 }
 main{
   overflow: hidden;
@@ -108,6 +140,9 @@ footer{
   margin: 0 auto;
   color: #6e6e6e;
 }
+.logo{
+  background: url("images/logo.png") no-repeat 20%;
+}
 .footer-content-left{
   float: left;
     font-size: 13px;
@@ -115,7 +150,7 @@ footer{
     width: 48%;
 }
 .footer-content-right{
-    font-size: 13px;
+    font-size: 11px;
     font-weight: 100;  
 }
 .copy{
@@ -133,10 +168,30 @@ footer{
   border-right: 1px solid darkgray;
   padding-right: 3px
 }
-
+.flag{
+  height: 1.5em;
+  vertical-align: middle;
+}
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
   header {
     background: url("images/your_verse_hero.jpg")no-repeat 50% 90%;  
     min-height: 100%;
   }
+  .footer-content-wrapper{
+  width: 100%;
+  margin: 0 auto;
+  color: #6e6e6e;
+  }
+
+  .footer-content-left{
+    float: left;
+      font-size: 13px;
+      font-weight: 100;
+      width: 48%;
+  }
+  .footer-content-right{
+      font-size: 11px;
+      font-weight: 100;  
+  }
+
 }
