--- a/index.css
+++ b/index.css
@@ -35,27 +35,35 @@ header{
 h1{
   background: url("images/title.png") no-repeat;
   height: 90px;  
+  margin-bottom: 1em;
 }
 h1 a{
   display: none;
+  
 }
 
 h2{
   background: url("images/sub.png") no-repeat;
   height: 90px;  
+  margin-bottom: 1em;
 }
 h2 a{
   display: none;
 }
 
-h3{
-  background: url("images/link.png") no-repeat;
-  height: 90px;  
+.img-title{
+  display: block;
+  width: 100%;
 }
-h3 a{
-  display: none;
+.link{
+     width: 45em;
+    display: block;
+    margin: 0 auto;
+    border-bottom: 1px solid transparent;
 }
-
+.link:hover{
+  border-bottom: 1px solid white;
+}
 
 nav{
   overflow: hidden;
@@ -158,6 +166,7 @@ footer{
   font-size: 13px;
   font-weight: 100;  
   margin: 10px 0 30px 0;
+  clear: both;
 }
 .footer-content-right ul li{
   display: inline-block;
@@ -173,15 +182,17 @@ footer{
   height: 1.5em;
   vertical-align: middle;
 }
-@media screen and (max-width: 1024px) { /* Specific to this particular image */
+
+
+@media screen and (min-width: 768px) { /* Specific to this particular image */
   header {
-    background: url("images/your_verse_hero.jpg")no-repeat 50% 90%;  
-    min-height: 100%;
+    background: url("images/your_verse_hero.jpg")no-repeat 50% 92%;  
+    min-height: 500px;    
   }
   .footer-content-wrapper{
-  width: 100%;
-  margin: 0 auto;
-  color: #6e6e6e;
+    width: 100%;
+    margin: 0 auto;
+    color: #6e6e6e;
   }
 
   .footer-content-left{
