--- a/index.css
+++ b/index.css
@@ -84,6 +84,11 @@ nav input{
   box-shadow: 0 1px 3px rgba(0, 0, 0, 1) inset;
   height: 20px;
   outline: none;  
+  text-indent: 19%;
+  color: lightgray;
+}
+input:focus{
+  outline: none;
 }
 
 nav ul li:first-child::before{
